@@ -3,8 +3,10 @@ module Temple
     # @api public
     class AttributeMerger < Filter
       default_options[:attr_delimiter] = {'id' => '_', 'class' => ' '}
+      default_options[:sort_attrs] = true
 
       def on_html_attrs(*attrs)
+        names = []
         result = {}
         attrs.each do |attr|
           raise(InvalidExpression, 'Attribute is not a html attr') if attr[0] != :html || attr[1] != :attr
@@ -36,9 +38,11 @@ module Temple
             end
           else
             result[name] = attr
+            names << name
           end
         end
-        [:multi, *result.sort.map {|name,attr| compile(attr) }]
+        result = options[:sort_attrs] ? result.sort : names.map {|k| [k, result[k]] }
+        [:multi, *result.map {|name,attr| compile(attr) }]
       end
 
       def on_html_attr(name, value)
